筛选组件优化处理

--- a/lib_uikit/src/main/res/layout/item_menu_child_chili_tab_list.xml
+++ b/lib_uikit/src/main/res/layout/item_menu_child_chili_tab_list.xml
@@ -22,7 +22,7 @@
         android:paddingTop="@dimen/dp_10"
         android:paddingBottom="@dimen/dp_10"
         android:singleLine="true"
-        android:text="积分转EP"
+        tools:text="积分转EP"
         android:textAlignment="center"
         android:textColor="@color/item_menu_child_text_color"
         android:textSize="10sp"
