--- a/lib_uikit/src/main/res/drawable-xxhdpi/item_menu_child_child_tab_bg.xml
+++ b/lib_uikit/src/main/res/drawable-xxhdpi/item_menu_child_child_tab_bg.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="#EF7143" />
             <corners android:radius="5dp" />
-            <stroke android:width="1dp" android:color="#FFD4C8" />
+            <stroke android:width="1dp" android:color="#EF7143" />
         </shape>
     </item>
     <item>
