--- a/lib_uikit/src/main/res/drawable-xxhdpi/item_menu_child_selected.xml
+++ b/lib_uikit/src/main/res/drawable-xxhdpi/item_menu_child_selected.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="#FFF1ED" />
+            <solid android:color="#EF7143" />
             <stroke android:width="1px" android:color="#EF7143" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="#F3F5F8" />
             <stroke android:width="1dp" android:color="#E7E9EB" />
             <corners android:radius="5dp" />
         </shape>
